--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -14,7 +14,7 @@
 @import 'base/colors';
 @import 'base/layout';
 @import 'base/spacing';
-@import 'base/playven_icons';
+@import 'base/mywebsite_icons';
 
 // UI Components are generic and reusable, and only relies on base and vendor css
 @import 'ui_components/buttons';
