--- a/src/styles/ui_components/_carousel.scss
+++ b/src/styles/ui_components/_carousel.scss
@@ -4,7 +4,7 @@
       color: map_get($color-map, 'light-blue');
 
       content: $icon-hex;
-      font-family: playven-icons, serif;
+      font-family: mywebsite-icons, serif;
       font-size: 5.25rem;
       position: absolute;
       top: 9.5rem;
@@ -65,7 +65,7 @@
     &:after {
       @extend .color-white;
 
-      font-family: playven-icons, serif;
+      font-family: mywebsite-icons, serif;
       font-size: .8rem;
       position: absolute;
     }
@@ -74,7 +74,7 @@
       @extend .color-dark-blue;
 
       content: $icon-hex;
-      font-family: playven-icons, serif;
+      font-family: mywebsite-icons, serif;
       font-size: 2.25rem;
       position: absolute;
 
