Some frontend changes fix sass

--- a/src/styles/components/_unauthenticated_modal.scss
+++ b/src/styles/components/_unauthenticated_modal.scss
@@ -31,7 +31,7 @@
         &:before {
           @extend .color-white;
           content: $icon-hex;
-          font-family: playven-icons, serif;
+          font-family: mywebsite-icons, serif;
           font-size: 2rem;
           position: absolute;
           z-index: -1;
