--- a/src/styles/components/_booking_court.scss
+++ b/src/styles/components/_booking_court.scss
@@ -45,7 +45,7 @@
       @extend .color-white;
 
       content: $icon-hex-close;
-      font-family: playven-icons, serif;
+      font-family: mywebsite-icons, serif;
       font-size: 1rem;
       position: absolute;
       z-index: 1;
