--- a/src/styles/components/_booking_modal.scss
+++ b/src/styles/components/_booking_modal.scss
@@ -57,7 +57,7 @@
       &:before {
         @extend .color-light-blue;
         content: $icon-logo;
-        font-family: playven-icons, serif;
+        font-family: mywebsite-icons, serif;
         position: absolute;
         z-index: 1;
         font-size: 10rem;
