Style Sheet Changes

--- a/src/styles/components/_price_bubble.scss
+++ b/src/styles/components/_price_bubble.scss
@@ -10,7 +10,7 @@
   &:before {
     @extend .color-primary-brand;
     content: $icon-hex;
-    font-family: playven-icons, serif;
+    font-family: mywebsite-icons, serif;
     font-size: 2.875rem;
     position: relative;
     z-index: 1;
