--- a/src/styles/components/_venue_thumb_gallery.scss
+++ b/src/styles/components/_venue_thumb_gallery.scss
@@ -17,7 +17,7 @@
       &:after {
         @extend .color-white;
         content: $icon-fullscreen;
-        font-family: playven-icons, serif;
+        font-family: mywebsite-icons, serif;
         font-size: 2rem;
         position: absolute;
         z-index: 1;
