--- a/src/styles/ui_components/_select2.scss
+++ b/src/styles/ui_components/_select2.scss
@@ -85,7 +85,7 @@
     @extend .color-lighter-grey;
 
     content: $icon-down-arrow;
-    font-family: playven-icons, serif;
+    font-family: mywebsite-icons, serif;
     position: absolute;
     top: -0.6rem;
     right: 0.45rem;
@@ -101,7 +101,7 @@
     @extend .color-lighter-grey;
 
     content: $icon-clock;
-    font-family: playven-icons, serif;
+    font-family: mywebsite-icons, serif;
     position: absolute;
     top: -0.75rem;
     right: 0.2rem;
