--- a/src/styles/ui_components/_modals.scss
+++ b/src/styles/ui_components/_modals.scss
@@ -32,7 +32,7 @@
       &:before {
         color: map_get($color-map, 'dark-blue');
         content: $icon-hex;
-        font-family: playven-icons, serif;
+        font-family: mywebsite-icons, serif;
         font-size: 40rem;
         position: absolute;
         top: 19.8rem;
